--- a/root/backend/.env
+++ b/root/backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://root:root@surf-school.ecavukq.mongodb.net/?retryWrites=true&w=majority&appName=Surf-school
+MONGO_URI=mongodb+srv://avindiobeyesekere:HrKnOaKiVN7BlAeQ@cluster0.edwkd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
