--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tremor/react": "^3.18.0",
     "axios": "^1.7.5",
+    "classnames": "^2.5.1",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
