add analytic part components

--- a/root/backend/.env
+++ b/root/backend/.env
@@ -1,2 +1,4 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://root:root@surf-school.ecavukq.mongodb.net/?retryWrites=true&w=majority&appName=Surf-school
+# MONGO_URI = mongodb+srv://root:root@surf-school.ecavukq.mongodb.net/?retryWrites=true&w=majority&appName=Surf-school
+
+MONGO_URI = mongodb+srv://admin:K5IZEw6qyruMzDje@cluster0.tyefy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
