--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -13,7 +13,6 @@
     "@tremor/react": "^3.18.0",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
-    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.436.0",
@@ -21,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-to-print": "^3.0.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
