--- a/root/backend/vercel.json
+++ b/root/backend/vercel.json
@@ -14,7 +14,7 @@
      },
      {
         "src": "/(.*)",
-        "dest": "src/routers/taskRoutes.js"
+        "dest": "routers/taskRoutes.js"
       }
     ]
    }
