--- a/root/backend/vercel.json
+++ b/root/backend/vercel.json
@@ -13,7 +13,7 @@
       "dest": "index.js"
      },
      {
-        "src": "/(.*)",
+        "src": "/api/(.*)",
         "dest": "src/routers/taskRoutes.js"
       }
     ]
