--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -13,15 +13,18 @@
     "@tremor/react": "^3.18.0",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.11.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-to-print": "^3.0.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
