--- a/root/backend/.env
+++ b/root/backend/.env
@@ -3,3 +3,14 @@ PORT = 5000
 MONGO_URI = mongodb+srv://root:root@surf-school.ecavukq.mongodb.net/?retryWrites=true&w=majority&appName=Surf-school
 
 # MONGO_URI = mongodb+srv://admin:K5IZEw6qyruMzDje@cluster0.tyefy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# MONGO_URI = mongodb+srv://januditharushika:vbSr8RKF4yePOyh7@cluster0.8l8jw.mongodb.net/codeanalyzer_db?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET = mysecretkey
+
+NODE_ENV = development
+
+MAILTRAP_TOKEN = 0d36212d5504932483ac8f6c1cda62b8
+MAILTRAP_ENDPOINT = https://send.api.mailtrap.io/
+
+CLIENT_URL = http://localhost:5173
